# codespaces-framework

./: .gitguardian.yaml  .gitignore  .gitmodules  404.html  MAINTAINERS.md  PHASES.md  README.md  VISION.md  index.html  mkdocs-base.yaml  mkdocs.yaml  repos.yaml
.devcontainer/: Makefile  devcontainer.json  makefile.sh  post-create-astroshop-test.sh  post-create.sh
audit/: AUDIT_INSTRUCTIONS.md  FRAMEWORK_PHASE2.md  RND-DOCKER-IN-DOCKER.md  VALIDATION-PLAN.md  fetch-data.sh  fetch-docs.sh  generate-html.py  master-table.html  phase1-results.json  phase1-scan.py
cleanup/: index.html
container-image/: index.html
docs/: container-image.md  dynatrace-integration.md  enablement-app.md  enablements.md  framework.md  functions.md  (+11 more)
sync/: README.md  cli.py  pyproject.toml
sync/commands/: approve.py  bump_repo_version.py  checkout.py  ci_status.py  cleanup_branches.py  clone.py  diff_cmd.py  generate_json.py  generate_registry.py  list_cmd.py  list_issues.py  list_pr.py  migrate.py  migrate_mkdocs.py  protect_main.py  push_update.py  release.py  revert.py  status.py  tag.py  validate.py
sync/core/: github_api.py  local_git.py  repos.py  version.py
sync/tests/: conftest.py  test_cli.py  test_cmd_checkout.py  test_cmd_ci_status.py  test_cmd_clone.py  test_cmd_diff.py  test_cmd_generate_json.py  test_cmd_list.py  test_cmd_list_pr.py  test_cmd_migrate.py  test_cmd_misc.py  test_cmd_push_update.py  test_cmd_release.py  test_cmd_status.py  test_cmd_tag.py  test_cmd_validate.py  test_core_github_api.py  test_core_local_git.py  test_core_repos.py  test_core_version.py
(+475 files in other folders)
